fix scaling on mobile

--- a/i2p2www/static/styles/duck/mobile.css
+++ b/i2p2www/static/styles/duck/mobile.css
@@ -174,3 +174,21 @@ div#content .inner {
 #post ul {
     font-size: .68rem;
 }
+
+.browser-onboarding .row-text {
+  float: right;
+  width: 80%;
+  font-size: small;
+}
+
+.browser-onboarding .row-image {
+  float: left;
+  width: 20%;
+  height: 70px;
+}
+
+.browser-onboarding .row-image > img {
+  float: left;
+  width: 90%;
+  padding-right: 4px;
+}
